set public properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-#spring.datasource.url = jdbc:${DB_URL}
-#spring.datasource.username = ${DB_USER_NAME}
-#spring.datasource.password = ${DB_USER_PASSWORD}
-#spring.jpa.hibernate.ddl-auto = create-drop
-
-spring.datasource.url = jdbc:postgresql://localhost:5432/java
-spring.datasource.username = postgres
-spring.datasource.password = azyza09a
+spring.datasource.url = jdbc:${DB_URL}
+spring.datasource.username = ${DB_USER_NAME}
+spring.datasource.password = ${DB_USER_PASSWORD}
 spring.jpa.hibernate.ddl-auto = create-drop
